--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
-    "stripe": "^15.10.0"
+    "stripe": "^15.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
